fixed the gap prob, footer looks nice at 720p but the elements are so spaced out at 1440p

--- a/app/frontend/stylesheets/pages/partials/_footer.scss
+++ b/app/frontend/stylesheets/pages/partials/_footer.scss
@@ -6,12 +6,12 @@ footer {
       // background-color: red;
     width: 110vw;
     bottom: 300px;
+    margin-bottom: -25px;
     z-index: -1;
   }
 }
 
 .footer-container {
-  margin-top: -50px;
   background-color: #85B6AA;
   height: 35vh;
   position: relative;
@@ -33,22 +33,24 @@ footer {
     .footer-links {
       display: flex;
       flex-direction: column;
-      padding-left: 15%;
+      padding-left: 10%;
     }
   }
 }
 
 .f-deco {
   position: absolute;
-  z-index: 0;
+  z-index: 1;
 
   &#black-logo {
-    left: 130px;
+    width: 250px;
+    left: 90px;
     bottom: 70px;
   }
 
   &#plant-bottom {
-    bottom: -150px;
+    width: 400px;
+    bottom: -100px;
     right: -80px;
     transform: rotate(30deg);
   }
@@ -59,7 +61,7 @@ nav {
   padding-bottom: 40px;
 
   a {
-    margin-right: 60px;
+    padding-right: 50px;
     font-size: 24px;
     font-weight: bolder;
   }
